<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_car"
        android:icon="@drawable/electric_car"
        android:title="@string/car" />
    <item
        android:id="@+id/navigation_chatBot"
        android:icon="@drawable/robot"
        android:title="@string/Assistance" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/avatar"
        android:title="@string/profile" />
</menu>
