<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewModel.LoginActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forgotpwd"
            android:textSize="36dp"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            >
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/forgetPwd_message"
            android:textSize="18dp"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            >
        </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeErrorColor="@color/txtFieldError"
        app:errorIconTint="@color/txtFieldError"
        app:errorTextColor="@color/txtFieldError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/emailicon"
        app:startIconTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="280dp"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/forgot_password"
            tools:srcCompat="@drawable/forgot_password"
            >
        </ImageView>
        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/next"
            android:textSize="20dp"
            android:background="@drawable/rounded_button"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>